# LSTM-Auditing-HydroKG

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-neo4j.txt  requirements-torch.txt  requirements.txt  run_enhancement_uahpc.slurm
configs/: default_config.yaml  neo4j_config.yaml
data/: README.md
docs/: ARCHITECTURE.md  METHODOLOGY.md  ONTOLOGY.md  RULES.md
figures/: Figure_1_plot.py  README.md
hydrokg/: __init__.py
hydrokg/adapters/: __init__.py  lstm_adapter.py
hydrokg/audit/: __init__.py  offline_auditor.py  realtime_auditor.py  violation_burden.py
hydrokg/cli/: run_enhanced_training.py  run_offline_audit.py  run_realtime_audit.py
hydrokg/data/: __init__.py  basin_attributes.py  et_water_balance.py  forcing_loader.py  synthetic.py
hydrokg/enhancement/: __init__.py  curriculum.py  enhanced_training.py  graph_analogy_correction.py  violation_embeddings.py
notebook/: analyze_results.ipynb
notebooks/: demo_end_to_end.ipynb
results/: README.md
scripts/: conceptual_framework_realtime_audit.py  init_neo4j_schema.cypher  run_enhanced_training.py  run_enhancement_uahpc.slurm  run_offline_audit.py
src/: hydrokg_adapters.py  hydrokg_audit.py  hydrokg_data.py  hydrokg_enhancement.py  hydrokg_evaluation.py  hydrokg_graph.py  hydrokg_rules.py  hydrokg_viz.py
tests/: test_enhancement.py  test_graph_store_memory.py  test_neo4j_store.py  test_offline_auditor_integration.py  test_ontology_sync.py  test_realtime_finetuning.py  test_rules.py  test_violation_burden.py  test_violation_embedding_injection.py
(+38 files in other folders)
